keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__basic.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: vdf

---
Vdf(
  key: "Outer Key",
  value: Obj(Obj({
    "Seq Key": [
      Str("Str Val"),
      Obj(Obj({})),
    ],
  })),
)
