keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__comments-2.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: rendered

---
"Outer Key"
{
	"Seq Key"	"Str Val"
	"Seq Key"
	{
	}
}

