keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__null_byte.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: vdf

---
Vdf(
  key: "Key",
  value: Obj(Obj({})),
)
