keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__parsed-app_info.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 20
expression: vdf

---
Vdf(
  key: "896660",
  value: Obj(Obj({
    "branches": [
      Obj(Obj({
        "experimental": [
          Obj(Obj({
            "buildid": [
              Str("6263839"),
            ],
            "description": [
              Str("Experimental version of Valheim"),
            ],
            "pwdrequired": [
              Str("1"),
            ],
            "timeupdated": [
              Str("1613728251"),
            ],
          })),
        ],
        "public": [
          Obj(Obj({
            "buildid": [
              Str("6246034"),
            ],
            "timeupdated": [
              Str("1613558776"),
            ],
          })),
        ],
        "unstable": [
          Obj(Obj({
            "buildid": [
              Str("6246034"),
            ],
            "description": [
              Str("Unstable test version of valheim"),
            ],
            "pwdrequired": [
              Str("1"),
            ],
            "timeupdated": [
              Str("1613469743"),
            ],
          })),
        ],
      })),
    ],
    "common": [
      Obj(Obj({
        "ReleaseState": [
          Str("released"),
        ],
        "associations": [
          Obj(Obj({})),
        ],
        "clienticon": [
          Str("c55a6b50b170ac6ed56cf90521273c30dccb5f12"),
        ],
        "clienttga": [
          Str("35e067b9efc8d03a9f1cdfb087fac4b970a48daf"),
        ],
        "gameid": [
          Str("896660"),
        ],
        "icon": [
          Str("1aab0586723c8578c7990ced7d443568649d0df2"),
        ],
        "logo": [
          Str("233d73a1c963515ee4a9b59507bc093d85a4e2dc"),
        ],
        "logo_small": [
          Str("233d73a1c963515ee4a9b59507bc093d85a4e2dc_thumb"),
        ],
        "name": [
          Str("Valheim Dedicated Server"),
        ],
        "osarch": [
          Str(""),
        ],
        "oslist": [
          Str("windows,linux"),
        ],
        "parent": [
          Str("892970"),
        ],
        "type": [
          Str("Tool"),
        ],
      })),
    ],
    "config": [
      Obj(Obj({
        "installdir": [
          Str("Valheim dedicated server"),
        ],
        "launch": [
          Obj(Obj({
            "0": [
              Obj(Obj({
                "config": [
                  Obj(Obj({
                    "oslist": [
                      Str("linux"),
                    ],
                  })),
                ],
                "executable": [
                  Str("start_server_xterm.sh"),
                ],
                "type": [
                  Str("server"),
                ],
              })),
            ],
            "1": [
              Obj(Obj({
                "config": [
                  Obj(Obj({
                    "oslist": [
                      Str("windows"),
                    ],
                  })),
                ],
                "executable": [
                  Str("start_headless_server.bat"),
                ],
                "type": [
                  Str("server"),
                ],
              })),
            ],
          })),
        ],
      })),
    ],
    "depot": [
      Obj(Obj({
        "config": [
          Obj(Obj({
            "oslist": [
              Str("windows"),
            ],
          })),
        ],
        "depotfromapp": [
          Str("1007"),
        ],
        "id": [
          Str("1004"),
        ],
        "manifests": [
          Obj(Obj({
            "public": [
              Str("6473168357831043306"),
            ],
          })),
        ],
        "maxsize": [
          Str("39546856"),
        ],
        "name": [
          Str("Steamworks SDK Redist (WIN32)"),
        ],
      })),
      Obj(Obj({
        "config": [
          Obj(Obj({
            "oslist": [
              Str("macos"),
            ],
          })),
        ],
        "depotfromapp": [
          Str("1007"),
        ],
        "id": [
          Str("1005"),
        ],
        "manifests": [
          Obj(Obj({
            "public": [
              Str("2135359612286175146"),
            ],
          })),
        ],
        "name": [
          Str("Steamworks SDK Redist (OSX32)"),
        ],
      })),
      Obj(Obj({
        "config": [
          Obj(Obj({
            "oslist": [
              Str("linux"),
            ],
          })),
        ],
        "depotfromapp": [
          Str("1007"),
        ],
        "id": [
          Str("1006"),
        ],
        "manifests": [
          Obj(Obj({
            "public": [
              Str("6688153055340488873"),
            ],
          })),
        ],
        "maxsize": [
          Str("59862244"),
        ],
        "name": [
          Str("Steamworks SDK Redist (LINUX32)"),
        ],
      })),
      Obj(Obj({
        "config": [
          Obj(Obj({
            "oslist": [
              Str("linux"),
            ],
          })),
        ],
        "encryptedmanifests": [
          Obj(Obj({
            "experimental": [
              Obj(Obj({
                "encrypted_gid_2": [
                  Str("BEDF872D73873D16C025EF87E27C2BDB"),
                ],
                "encrypted_size_2": [
                  Str("2559486959C6E5DCEA5C71ED32BA9080"),
                ],
              })),
            ],
          })),
        ],
        "id": [
          Str("896661"),
        ],
        "manifests": [
          Obj(Obj({
            "public": [
              Str("521795651741005384"),
            ],
          })),
        ],
        "maxsize": [
          Str("985409357"),
        ],
        "name": [
          Str("Valheim dedicated server Linux"),
        ],
      })),
      Obj(Obj({
        "config": [
          Obj(Obj({
            "oslist": [
              Str("windows"),
            ],
          })),
        ],
        "encryptedmanifests": [
          Obj(Obj({
            "experimental": [
              Obj(Obj({
                "encrypted_gid_2": [
                  Str("9FD2B7B42FACB1D1FC439DD83ED2BED9"),
                ],
                "encrypted_size_2": [
                  Str("B2D602E667364DEDCB7C3D6EE9AA7374"),
                ],
              })),
            ],
          })),
        ],
        "id": [
          Str("896662"),
        ],
        "manifests": [
          Obj(Obj({
            "public": [
              Str("5449924312569304795"),
            ],
          })),
        ],
        "maxsize": [
          Str("963189471"),
        ],
        "name": [
          Str("Valheim dedicated server Windows"),
        ],
      })),
    ],
  })),
)
