keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__parsed-base_unquoted.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 47
expression: vdf

---
PartialVdf(
  key: "Key",
  value: Obj(Obj({})),
  bases: [
    "../some_file.pop",
  ],
)
