keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__parsed-basic.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 20
expression: vdf

---
Vdf(
  key: "Outer Key",
  value: Obj(Obj({
    "Seq Key": [
      Str("Str Val"),
      Obj(Obj({})),
    ],
  })),
)
