keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__parsed-null_byte.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 20
expression: vdf

---
Vdf(
  key: "Key",
  value: Obj(Obj({})),
)
